@@ -7,7 +7,6 @@
  */
 package com.powsybl.metrix.integration;
 
-import com.google.common.collect.ImmutableList;
 import com.powsybl.contingency.*;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.serde.NetworkSerDe;
@@ -20,6 +19,7 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.util.Collections;
+import java.util.List;
 import java.util.ResourceBundle;
 
 import static com.powsybl.metrix.mapping.LogDslLoader.LogType.WARNING;
@@ -28,7 +28,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 /**
  * @author Marianne Funfrock {@literal <marianne.funfrock at rte-france.com>}
  */
-public class MetrixContingencyAnalysisTest {
+class MetrixContingencyAnalysisTest {
 
     private static final ResourceBundle RESOURCE_BUNDLE = ResourceBundle.getBundle("lang.MetrixAnalysis");
 
@@ -74,7 +74,7 @@ public class MetrixContingencyAnalysisTest {
     }
 
     private void loadContingencyTest(Contingency contingency, String expected) throws IOException {
-        ContingenciesProvider provider = network -> ImmutableList.of(contingency);
+        ContingenciesProvider provider = net -> List.of(contingency);
 
         StringWriter writer = new StringWriter();
         try (BufferedWriter bufferedWriter = new BufferedWriter(writer)) {
@@ -129,7 +129,7 @@ public class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataLoadContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addCurativeLoad("loadId", 10, ImmutableList.of("ctyForLoadId"));
+        metrixDslData.addCurativeLoad("loadId", 10, List.of("ctyForLoadId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - loadId", "load", "ctyForLoadId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
@@ -137,7 +137,7 @@ public class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataPhaseTapChangerContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addPtc("phaseTapChangerId", MetrixPtcControlType.OPTIMIZED_ANGLE_CONTROL, ImmutableList.of("ctyForPhaseTapChangerId"));
+        metrixDslData.addPtc("phaseTapChangerId", MetrixPtcControlType.OPTIMIZED_ANGLE_CONTROL, List.of("ctyForPhaseTapChangerId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - phaseTapChangerId", "phaseTapChanger", "ctyForPhaseTapChangerId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
@@ -145,7 +145,7 @@ public class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataGeneratorContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addGeneratorForRedispatching("generatorId", ImmutableList.of("ctyForGeneratorId"));
+        metrixDslData.addGeneratorForRedispatching("generatorId", List.of("ctyForGeneratorId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - generatorId", "generator", "ctyForGeneratorId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
@@ -153,7 +153,7 @@ public class MetrixContingencyAnalysisTest {
     @Test
     void metrixDslDataHvdcLineContingencyAnalysisTest() throws IOException {
         MetrixDslData metrixDslData = new MetrixDslData();
-        metrixDslData.addHvdc("hvdcLineId", MetrixHvdcControlType.OPTIMIZED, ImmutableList.of("ctyForHvdcLineId"));
+        metrixDslData.addHvdc("hvdcLineId", MetrixHvdcControlType.OPTIMIZED, List.of("ctyForHvdcLineId"));
         String expected = getWarningInvalidMetrixDslDataContingency(" - hvdcLineId", "hvdcLine", "ctyForHvdcLineId");
         metrixDslDataContingencyAnalysisTest(metrixDslData, expected);
     }
